# figma-files

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/local/: Dockerfile
figma_files/: rest.py
figma_files/base/: files.py  primitives.py  property_types.py  utils.py
figma_files/node/: __init__.py  boolean.py  canvas.py  component.py  document.py  ellipse.py  frame.py  group.py  instance.py  line.py  node.py  polygon.py  primitives.py  rectangle.py  section.py  slice.py  star.py  text.py  utils.py  vector.py  washi.py
