[tool.poetry]
name = "figma_files"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.9.0"
lxml = "^5.3.0"
cssutils = "^2.11.1"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    "test.py",
    "tests",
    ".venv",
    ".env",
    "venv",
    "env",
]

line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = []
exclude = ["migrations"]

fixable = ["ALL"]
unfixable = ["B"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "D104", "F403"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
case-sensitive = true
split-on-trailing-comma = false
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]